test/parallel/forall/zip/zipRangeMismatch2.good
zipRangeMismatch2.chpl:3: error: halt reached - size mismatch in zippered iteration
